force-app/main/default/objects/Consultant_Bio_Project_Item__c/Consultant_Bio_Project_Item__c.object-meta.xml
<CustomObject>
    <description>List of items that can be included in a contact&apos;s conga-generated bio.</description>
    <label>Consultant Bio Project Item</label>
    <nameField>
        <displayFormat>CBI-{00000}</displayFormat>
        <label>Item #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consultant Bio Project Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>