force-app/main/default/objects/Consultant_Bio_Project_Item__c/fields/Assignment__c.field-meta.xml
<CustomField>
    <fullName>Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assignment</label>
    <referenceTo>pse__Assignment__c</referenceTo>
    <relationshipLabel>Consultant Bio Project Items</relationshipLabel>
    <relationshipName>Consultant_Bio_Project_Items</relationshipName>
    <type>Lookup</type>
</CustomField>