force-app/main/default/objects/Consultant_Bio_Project_Item__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Contact_Bio_Project_Items</relationshipName>
    <type>Lookup</type>
</CustomField>