force-app/main/default/objects/Consultant_Bio_Project_Item__c/fields/Consultant__c.field-meta.xml
<CustomField>
    <fullName>Consultant__c</fullName>
    <label>Consultant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Contact_Bio_Project_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>