force-app/main/default/objects/Consultant_Bio_Project_Item__c/fields/Include_in_Bio__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Bio__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Included in Bio</label>
    <type>Checkbox</type>
</CustomField>