force-app/main/default/objects/Consultant_Bio_Project_Item__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <formula>TEXT(Client__r.Industry)</formula>
    <label>Industry</label>
    <type>Text</type>
</CustomField>