force-app/main/default/objects/Consultant_Bio_Project_Item__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>pse__Proj__c</referenceTo>
    <relationshipLabel>Consultant Bio Project Items</relationshipLabel>
    <relationshipName>Consultant_Bio_Project_Items</relationshipName>
    <type>Lookup</type>
</CustomField>